# agent-auth

./: .editorconfig  .gitignore  .mdformat.toml  .release-please-config.json  .releaserc.json  .releaserc.mjs  .secretsignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE.md  README.md  REUSE.toml  SECURITY.md  TODO.md  Taskfile.yml  functional_decomposition.yaml  install.sh  lefthook.yml  package-lock.json  package.json  product_breakdown.yaml  pyproject.toml  pyrightconfig.json  taplo.toml  treefmt.toml
.claude/instructions/: bash.md  coding-standards.md  design.md  plan-template.md  python.md  release-and-hygiene.md  service-design.md  testing-standards.md  tooling-and-ci.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  renovate.json  tool-versions.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bash.yml  benchmark.yml  changelog-bot.yml  changelog-lint.yml  check.yml  codeql.yml  dco.yml  dependency-review.yml  dependency-submission.yml  merge-bot.yml  mutation.yml  pr-lint.yml  release-please.yml  release-pr.yml  release-publish.yml  release-tag.yml  release.yml  reuse.yml  scorecard.yml  security.yml  semantic-release.yml  test.yml  typecheck.yml  verify-dependencies.yml  verify-design.yml  verify-function-tests.yml  verify-integration-isolation.yml  verify-standards.yml  verify-token-cli-http-parity.yml
benchmarks/: README.md  conftest.py  test_tokens_benchmark.py
changelog/0.14.0/: pr-302-pr-template-commit-msg-lint.yml  pr-313-gpg-bridge-openapi.yml  pr-315-setup-devcontainer-signing.yml  pr-335-gpg-cli-refresh-reissue.yml
changelog/@unreleased/: pr-303-yaml-schema-lint.yml  pr-310-merge-bot-commit-msg.yml  pr-314-changelog-bot.yml  pr-321-yaml-driven-release-workflow.yml  pr-322-garlic-nugget.yml  pr-330-rollback-error-mask.yml  pr-334-collapse-gpg-backend.yml  pr-336-setup-signing-smoke-test.yml  pr-339-gpg-fail-fast-wedge.yml  pr-341-cli-version-flag.yml  pr-343-gpg-bridge-passphrase-store.yml  pr-PLACEHOLDER-yaml-driven-release-workflow.yml
design/: ASSURANCE.md  ASVS.md  DESIGN.md  SELF_ASSESSMENT.md  SSDF.md  THINGS.md  error-codes.md  functional_decomposition.csv  functional_decomposition.d2  functional_decomposition.md  functional_decomposition.yaml  product_breakdown.csv  product_breakdown.d2  product_breakdown.md  product_breakdown.yaml
design/decisions/: 0001-list-todos-batched-applescript.md  0001-things-client-fake.md  0002-list-todos-batched-applescript.md  0003-things-client-cli-split.md  0004-docker-integration-tests.md  0005-things-services-docker-tests.md  0006-management-endpoint-no-auth.md  0006-token-format.md  0007-sqlite-field-level-encryption.md  0008-system-keyring-for-key-material.md  0009-cli-server-split.md  0010-three-tier-scope-model.md  (+43 more)
docker/: Dockerfile.agent-auth.test  Dockerfile.gpg-bridge.test  Dockerfile.gpg-cli.test  Dockerfile.test  Dockerfile.things-bridge.test  Dockerfile.things-cli.test  Dockerfile.things-client-applescript.test  README.md  compose.test.things-bridge.yaml  compose.test.yaml  config.test.json  config.test.things-bridge.yaml  config.test.yaml  docker-compose.yaml  entrypoint.test.sh
examples/: fake-things.yaml
openapi/: README.md  agent-auth.v1.yaml  things-bridge.v1.yaml
plans/: adopt-owasp-asvs.md  adopt-ssdf.md  api-stability-issues-20-24-27-28.md  changelog-yaml-schema-issue-295.md  design-assurance-adrs.md  dockerize-integration-tests.md  dockerize-things-tests.md  implement-agent-auth-server.md  implement-things-cli.md  integration-tests-gpg-bridge-issue-278.md  mdformat-taplo-keep-sorted.md  metrics-endpoint-issue-26.md  migrate-to-uv.md  mypy-pyright-ci.md  notification-plugin-http-issue-6.md  openapi-specs.md  otel-semconv-adoption.md  pytest-cov-threshold.md  ruff-lint-format.md  setup-toolchain-checksums.md  setup-toolchain-fetch-release-asset-helper.md  setup-toolchain-parallelise-downloads.md  setup-toolchain-rate-limit-fix.md  shellcheck-shfmt-ci.md  shutdown-subprocess-tests.md  sigterm-graceful-shutdown.md  spdx-sbom-reuse-release.md  speed-up-list-todos.md  split-ci-unit-integration.md  split-integration-per-service.md  task-runner-taskfile.md  things-client-cli-split.md  things-client-fake.md  token-management-http-api.md  venv-rebuild-and-task-services.md  wire-ripsecrets-and-treefmt-ci.md  yaml-driven-release-workflow-issue-296.md
scripts/: _bootstrap_venv.sh  agent-auth.sh  benchmark.sh  build.sh  check-mutation-score.sh  check-package-coverage.sh  design-generate.sh  extract-commit-msg-block.py  format.sh  gpg-backend-host.sh  gpg-bridge.sh  gpg-cli.sh  install-hooks.sh  lint.sh  mutation-test.sh  pip_audit_to_sarif.py  pkg-format.sh  pkg-lint.sh  pkg-test.sh  pkg-typecheck.sh  release.sh  reuse-lint.sh  serve-things-bridge.sh  serve.sh  setup-devcontainer-signing.sh  test.sh  things-bridge.sh  things-cli.sh  things-client-applescript.sh  typecheck.sh  validate-commit-msg-block.py  verify-dependencies.sh  verify-design.sh  verify-function-tests.sh  verify-integration-isolation.sh  verify-standards.sh  verify-token-cli-http-parity.sh  verify_workspace_deps.py
tests/: _http.py  _signals.py  _tls.py  conftest.py  factories.py  test_agent_auth_client.py  test_approval.py  test_audit.py  test_audit_chain.py  test_audit_schema.py  test_cli.py  test_config.py  test_crypto.py  test_env_plugin.py  test_error_taxonomy.py  test_extract_commit_msg_block.py  test_gpg_backend_fake.py  test_gpg_bridge_config.py  test_gpg_bridge_server.py  test_gpg_cli_config.py  test_gpg_end_to_end.py  test_gpg_models.py  test_gpg_subprocess_client.py  test_integration_harness.py  test_integration_support.py  test_keys.py  test_migrations.py  test_openapi_spec.py  test_perf_budget.py  test_pip_audit_to_sarif.py  test_rate_limit.py  test_release_semver.py  test_report_scan_failure.py  test_scopes.py  test_server.py  test_server_metrics.py  test_server_rate_limit.py  test_server_shutdown.py  test_server_tls.py  test_setup_devcontainer_signing.py  (+23 more)
(+139 files in other folders)
