# SPDX-FileCopyrightText: 2026 Aidan Nagorcka-Smith
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-auth"
dynamic = ["version"]
description = "Token-based authorization for AI agent access to macOS applications"
requires-python = ">=3.11"
dependencies = [
    # keep-sorted start
    "cryptography>=42.0",
    "keyring>=25.0",
    "pyyaml>=6.0",
    # keep-sorted end
]

[project.optional-dependencies]
dev = [
    # keep-sorted start
    "build>=1.0",
    "keyrings.alt>=5.0",
    "mutmut>=3.5",
    "mypy>=1.20",
    "openapi-spec-validator>=0.7",
    "pip-audit>=2.7",
    "pyright>=1.1.408",
    "pytest-cov>=5.0",
    "pytest>=8.0",
    "reuse>=4.0",
    "testcontainers[compose]>=4",
    # keep-sorted end
]

[project.scripts]
# keep-sorted start
agent-auth = "agent_auth.cli:main"
agent-auth-notifier = "agent_auth_notifier.cli:main"
things-bridge = "things_bridge.cli:main"
things-cli = "things_cli.cli:main"
things-client-cli-applescript = "things_client_applescript.cli:main"
# keep-sorted end

[tool.setuptools.packages.find]
where = ["src"]
# ``tests_support`` ships the tests-only HTTP notifier sidecar (#6)
# used by the Docker integration tests. It lives under ``src/`` for
# ergonomic in-tree development but must never enter the distributed
# wheel. The integration container picks it up via ``PYTHONPATH``
# instead of an installed distribution (see ``docker/Dockerfile.test``).
exclude = ["tests_support*"]

[tool.setuptools_scm]
# Versions are derived from git tags (e.g. a ``v0.2.0`` tag produces
# ``0.2.0``). Untagged commits get a development version like
# ``0.2.1.dev5+g1234abc``.
fallback_version = "0.0.0+unknown"

[tool.pip-audit]
# List known-acceptable advisories here with a comment explaining why each
# is acceptable. pip-audit accepts identifiers from multiple databases. Examples:
#   ignore-vuln = ["PYSEC-2024-12345"]     # PYSEC advisory
#   ignore-vuln = ["GHSA-xxxx-xxxx-xxxx"]  # GitHub Security Advisory
ignore-vuln = []

[tool.pytest.ini_options]
# ``tests_support`` is deliberately excluded from the ``agent-auth``
# wheel (see ``[tool.setuptools.packages.find]``) so it can never ship
# in a production install. Tests still need to import it from the
# source tree, so add ``src/`` to the pytest pythonpath.
pythonpath = ["src"]
markers = [
    "covers_function(*names): declare which functional-decomposition leaf functions a test exercises (read by `systems-engineering function verify`)",
    "perf_budget: asserts a latency budget documented in design/DESIGN.md § Performance budget. Discoverable as a group via `pytest -m perf_budget`.",
]
# Coverage is gated at a ratcheting floor per
# .claude/instructions/testing-standards.md. --cov-fail-under is the
# single lever: never lowered without an explicit justification commit.
# See CONTRIBUTING.md § "Coverage" for the bump procedure. Integration
# tests run in a separate CI job and are excluded here — rolling them
# into the floor would make it flaky on Docker availability.
addopts = [
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=74",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Standard no-cover pragma.
    "pragma: no cover",
    # Type-checking-only imports never execute at runtime.
    "if TYPE_CHECKING:",
    # Abstract method bodies and protocol stubs.
    "raise NotImplementedError",
    # Defensive branches that only fire on platform mismatches.
    "if __name__ == .__main__.:",
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
# 100-character soft limit. Ruff's default is 88; 100 better fits
# descriptive error messages and SQL strings already common in this
# codebase without forcing wraps that reduce readability.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

# Type-checking configuration. Two checkers run in CI (see
# .claude/instructions/python.md): mypy for Python-standard semantics,
# pyright for a second implementation catching disjoint issues. The
# project-wide default is strict. The [[tool.mypy.overrides]] block
# below only carries narrow, per-reason relaxations (currently just
# disallow_untyped_defs = false for tests, so pytest fixture magic
# stays ergonomic). Any such relaxation must be mirrored in
# pyrightconfig.json — typically via an executionEnvironments entry
# for tests-style relaxations or the top-level ignore/exclude lists
# for full module skips. Renames MUST touch both files.
# scripts/verify-standards.sh asserts the two sides stay in sync: any
# ignore_errors = true override pairs with a pyrightconfig.json
# 'ignore' path, and any disallow_* = false override pairs with a
# pyrightconfig.json 'executionEnvironments' root relaxing the
# equivalent reportMissing/reportUnknown* diagnostic.
[tool.mypy]
python_version = "3.11"
strict = true
# Point mypy at both trees. CLI invocation stays `mypy src tests`.
files = ["src", "tests"]

# Third-party imports without type stubs. These are separately
# addressed by pulling in types-* packages as they become available;
# tracked in the ratchet issues.
[[tool.mypy.overrides]]
module = [
    # keep-sorted start
    "keyring",
    "keyring.*",
    "testcontainers",
    "testcontainers.*",
    "yaml",
    # keep-sorted end
]
ignore_missing_imports = true


# Pytest convention: test function signatures (``def test_foo(tmp_path):``)
# intentionally stay unannotated — pytest's fixture injection already gives
# each parameter a single well-known type, and adding ``-> None`` / fixture
# type hints to every test provides no extra value while making the suite
# much noisier. Keep strict everywhere else.
[[tool.mypy.overrides]]
module = [
    # keep-sorted start
    "tests.*",
    "tests_support.*",
    # keep-sorted end
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# Mutation testing, per .claude/instructions/testing-standards.md
# "Mutation testing on security-critical paths" and ADR 0021. Mutates
# the five modules that together implement the token lifecycle and
# cryptographic/storage trust base: tokens (HMAC signing / parsing),
# crypto (AES-GCM encrypt/decrypt), keys (keyring load/generate),
# scopes (tier resolution / authorisation decisions), store (token
# family persistence with field-level encryption). Survivors on these
# modules indicate a real gap in the test suite because a subtle
# regression here is a security defect rather than a functional one.
#
# The runner is scoped to the unit-test files that directly exercise
# these modules so a single mutant triggers at most one focused test
# run rather than the full suite — mutation testing otherwise scales
# quadratically with test-suite size and becomes impractical on every
# PR. This job runs nightly on CI (see mutation.yml); the score floor
# is enforced by scripts/check-mutation-score.sh, which reads the
# threshold from the [tool.mutation_score] section below.
[tool.mutmut]
paths_to_mutate = [
    # keep-sorted start
    "src/agent_auth/crypto.py",
    "src/agent_auth/keys.py",
    "src/agent_auth/scopes.py",
    "src/agent_auth/store.py",
    "src/agent_auth/tokens.py",
    # keep-sorted end
]
# mutmut only copies files under paths_to_mutate into the mutants/
# working copy by default, so sibling modules (agent_auth.config,
# agent_auth.audit, agent_auth.errors, ...) and the other top-level
# packages referenced by the test suite are missing at import time.
# Replicate the entire src/ + tests_support so the Python imports the
# pytest session expects all resolve; per-mutant copies overwrite the
# files under paths_to_mutate for each mutation.
also_copy = [
    "src/",
    "src/tests_support/",
]
# Explicitly override the default tests_dir to just the unit-test
# files that directly exercise the mutated modules. Integration
# tests under tests/integration/* are too slow for the per-mutant
# loop and the other tests/test_*.py files don't add signal on
# tokens / crypto / keys / scopes / store.
tests_dir = [
    # keep-sorted start
    "tests/test_crypto.py",
    "tests/test_keys.py",
    "tests/test_scopes.py",
    "tests/test_store.py",
    "tests/test_tokens.py",
    # keep-sorted end
]
pytest_add_cli_args = ["--no-cov"]
do_not_mutate = [
    # __init__.py is a pure re-export surface; mutating it just
    # produces noise without signal on the security properties we're
    # trying to assert.
    "src/agent_auth/__init__.py",
]

# Mutation-score floor for the scheduled mutation CI job. The local
# baseline on the five targeted modules (tokens, crypto, keys, scopes,
# store) was 68.95% (262 killed / 380 actionable mutants); the floor
# is set a few points below to absorb run-to-run variance while still
# catching a regression. Ratchets upward with the same never-lower
# policy as [tool.pytest.ini_options].addopts --cov-fail-under. Score
# is killed / (killed + survived), ignoring no_tests / skipped /
# timeout mutants.
[tool.mutation_score]
fail_under = 65.0
