# SPDX-FileCopyrightText: 2026 Aidan Nagorcka-Smith
#
# SPDX-License-Identifier: MIT

# Workspace-only root: the per-service packages live under
# ``packages/*`` and each carries its own ``pyproject.toml``. This root
# file owns only the uv workspace declaration and the cross-cutting
# tooling configuration (pytest, coverage, mypy, ruff, mutmut, …) —
# there is no runtime distribution built from the repo root.

[project]
name = "agent-auth-workspace"
version = "0.0.0"
description = "Monorepo workspace root for the agent-auth family of services"
requires-python = ">=3.11"

[project.optional-dependencies]
# ``uv sync --extra dev`` installs every workspace member plus the
# shared dev toolchain. Individual services consume their own runtime
# dependencies through their own pyproject.toml; this extra only
# carries the cross-cutting testing / linting / release tools.
dev = [
    # keep-sorted start
    "build>=1.0",
    "keyrings.alt>=5.0",
    "mutmut>=3.5",
    "mypy>=1.20",
    "openapi-spec-validator>=0.7",
    "pip-audit>=2.7",
    "pyright>=1.1.408",
    "pytest-benchmark>=5.0",
    "pytest-cov>=5.0",
    "pytest>=8.0",
    "reuse>=4.0",
    # keep-sorted end
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# Every workspace member resolves cross-package imports against the
# other workspace members rather than PyPI. When a package is
# published, consumers can pin a PyPI version in their own
# ``pyproject.toml`` and the source override below drops out.
agent-auth = { workspace = true }
agent-auth-common = { workspace = true }
gpg-backend-cli-host = { workspace = true }
gpg-bridge = { workspace = true }
gpg-cli = { workspace = true }
things-bridge = { workspace = true }
things-cli = { workspace = true }
things-client-cli-applescript = { workspace = true }

# ``uv sync`` at the workspace root installs every member as a dev
# dependency of the root package. PEP 735 ``dependency-groups`` is the
# canonical place for this; ``uv`` picks up the ``dev`` group by
# default and ``--no-dev`` skips the entries, so a production install
# from this root never pulls in any of the package bodies.
[dependency-groups]
dev = [
    # keep-sorted start
    "agent-auth",
    "agent-auth-common[testing]",
    "gpg-backend-cli-host",
    "gpg-bridge",
    "gpg-cli",
    "things-bridge",
    "things-cli",
    "things-client-cli-applescript",
    # keep-sorted end
]

[tool.pip-audit]
# List known-acceptable advisories here with a comment explaining why each
# is acceptable. pip-audit accepts identifiers from multiple databases. Examples:
#   ignore-vuln = ["PYSEC-2024-12345"]     # PYSEC advisory
#   ignore-vuln = ["GHSA-xxxx-xxxx-xxxx"]  # GitHub Security Advisory
ignore-vuln = []

[tool.pytest.ini_options]
# ``tests_support`` is deliberately excluded from the
# ``agent-auth-common`` wheel (see its
# ``[tool.setuptools.packages.find].exclude``) so it can never ship in
# a production install. Tests still need to import it from the source
# tree, so add the workspace src trees to the pytest pythonpath. The
# per-package ``src/`` roots are added explicitly so an editable
# install drift (which hides the workspace modules behind
# ``.venv/lib/.../site-packages``) still resolves.
#
# The per-package ``tests/`` trees are also on the pythonpath because
# the things-bridge and gpg-bridge test fakes (``things_client_fake``,
# ``gpg_backend_fake``) are launched by the production code under test
# via ``python -m <fake> --fixtures …`` and must resolve as top-level
# modules. The fakes never ship in any wheel — the per-package
# ``setuptools.packages.find`` excludes ``tests*`` — so this is a
# dev/test-only path entry.
pythonpath = [
    # keep-sorted start
    "packages/agent-auth-common/src",
    "packages/agent-auth/src",
    "packages/gpg-backend-cli-host/src",
    "packages/gpg-bridge/src",
    "packages/gpg-bridge/tests",
    "packages/gpg-cli/src",
    "packages/things-bridge/src",
    "packages/things-bridge/tests",
    "packages/things-cli/src",
    "packages/things-client-cli-applescript/src",
    # keep-sorted end
]
markers = [
    "covers_function(*names): declare which functional-decomposition leaf functions a test exercises (read by `systems-engineering function verify`)",
    "perf_budget: asserts a latency budget documented in design/DESIGN.md § Performance budget. Discoverable as a group via `pytest -m perf_budget`.",
]
# Coverage is gated at a ratcheting floor per
# .claude/instructions/testing-standards.md. --cov-fail-under is the
# single lever: never lowered without an explicit justification commit.
# See CONTRIBUTING.md § "Coverage" for the bump procedure. Integration
# tests run in a separate CI job and are excluded here — rolling them
# into the floor would make it flaky on Docker availability.
#
# ``-p tests_support.integration.plugin`` registers the workspace-wide
# Docker-backed integration fixtures (image build, agent-auth /
# things-bridge container factories, ``pytest_runtest_makereport``
# hook). Plugins must be registered at the top-level pytest invocation;
# pytest forbids ``pytest_plugins`` in non-root conftests, so ``-p`` in
# addopts is the canonical way to load it for every per-package
# ``tests/integration/`` tree. The plugin's session-scoped fixtures
# only activate when a test requests them, so loading it at root is
# free for unit-test runs.
# ``importlib`` import-mode lets each package's ``tests/`` tree carry
# its own ``conftest.py`` without name collisions in ``sys.modules``.
# The historical ``prepend`` default would import every conftest as a
# top-level ``conftest`` module, which collides as soon as more than
# one package's tests get collected in a single session.
addopts = [
    "-p",
    "tests_support.integration.plugin",
    "--import-mode=importlib",
    "--cov=packages",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=74",
]

[tool.coverage.run]
branch = true
source = ["packages"]
# Exclude every package's tests/ tree, the agent-auth benchmarks
# tree, and the integration-only slice of ``tests_support`` from
# coverage measurement. ``--cov=packages`` casts a wide net so the
# ratchet keeps catching any new packages/<svc>/src/ module added to
# the workspace, but neither the test code nor the integration plugin
# / harness / docker support should count toward the unit-mode floor:
# those only run inside the Docker-backed integration session, never
# in production or in the unit-test pass that gates the floor. The
# rest of ``tests_support`` (notifier sidecar, http helpers, factories)
# IS exercised by unit tests and stays measured so a regression there
# fails the gate.
omit = [
    # keep-sorted start
    "packages/*/benchmarks/*",
    "packages/*/tests/*",
    "packages/agent-auth-common/src/tests_support/integration/*",
    # keep-sorted end
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Standard no-cover pragma.
    "pragma: no cover",
    # Type-checking-only imports never execute at runtime.
    "if TYPE_CHECKING:",
    # Abstract method bodies and protocol stubs.
    "raise NotImplementedError",
    # Defensive branches that only fire on platform mismatches.
    "if __name__ == .__main__.:",
]

[tool.ruff]
src = [
    # keep-sorted start
    "packages/agent-auth-common/src",
    "packages/agent-auth/src",
    "packages/gpg-backend-cli-host/src",
    "packages/gpg-bridge/src",
    "packages/gpg-cli/src",
    "packages/things-bridge/src",
    "packages/things-cli/src",
    "packages/things-client-cli-applescript/src",
    "tests",
    # keep-sorted end
]
target-version = "py311"
# 100-character soft limit. Ruff's default is 88; 100 better fits
# descriptive error messages and SQL strings already common in this
# codebase without forcing wraps that reduce readability.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

# Type-checking configuration. Two checkers run in CI (see
# .claude/instructions/python.md): mypy for Python-standard semantics,
# pyright for a second implementation catching disjoint issues. The
# project-wide default is strict. The [[tool.mypy.overrides]] block
# below only carries narrow, per-reason relaxations (currently just
# disallow_untyped_defs = false for tests, so pytest fixture magic
# stays ergonomic). Any such relaxation must be mirrored in
# pyrightconfig.json — typically via an executionEnvironments entry
# for tests-style relaxations or the top-level ignore/exclude lists
# for full module skips. Renames MUST touch both files.
# scripts/verify-standards.sh asserts the two sides stay in sync: any
# ignore_errors = true override pairs with a pyrightconfig.json
# 'ignore' path, and any disallow_* = false override pairs with a
# pyrightconfig.json 'executionEnvironments' root relaxing the
# equivalent reportMissing/reportUnknown* diagnostic.
[tool.mypy]
python_version = "3.11"
strict = true
# Point mypy at every workspace source tree plus tests + benchmarks.
# Keep the CLI invocation as ``mypy`` (no explicit paths); listing
# them here means ``mypy`` picks up the full matrix.
files = [
    # keep-sorted start
    "packages/agent-auth-common/src",
    "packages/agent-auth-common/tests",
    "packages/agent-auth/benchmarks",
    "packages/agent-auth/src",
    "packages/agent-auth/tests",
    "packages/gpg-backend-cli-host/src",
    "packages/gpg-backend-cli-host/tests",
    "packages/gpg-bridge/src",
    "packages/gpg-bridge/tests",
    "packages/gpg-cli/src",
    "packages/gpg-cli/tests",
    "packages/things-bridge/src",
    "packages/things-bridge/tests",
    "packages/things-cli/src",
    "packages/things-cli/tests",
    "packages/things-client-cli-applescript/src",
    "packages/things-client-cli-applescript/tests",
    "tests",
    # keep-sorted end
]
# With per-package ``src/`` trees, mypy can't tell that two modules
# with the same short name (e.g. ``config.py`` in agent-auth vs
# things-bridge) are in different packages. Use the namespace mode so
# only full-qualified names matter. See
# https://mypy.readthedocs.io/en/stable/running_mypy.html#mapping-file-paths-to-modules.
explicit_package_bases = true
namespace_packages = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/packages/agent-auth-common/src:$MYPY_CONFIG_FILE_DIR/packages/agent-auth/src:$MYPY_CONFIG_FILE_DIR/packages/gpg-backend-cli-host/src:$MYPY_CONFIG_FILE_DIR/packages/gpg-bridge/src:$MYPY_CONFIG_FILE_DIR/packages/gpg-bridge/tests:$MYPY_CONFIG_FILE_DIR/packages/gpg-cli/src:$MYPY_CONFIG_FILE_DIR/packages/things-bridge/src:$MYPY_CONFIG_FILE_DIR/packages/things-bridge/tests:$MYPY_CONFIG_FILE_DIR/packages/things-cli/src:$MYPY_CONFIG_FILE_DIR/packages/things-client-cli-applescript/src"

# Per-package ``tests/`` trees collapse to a flat module namespace
# under mypy: each ``conftest.py`` becomes the ``conftest`` module and
# every ``tests/integration/__init__.py`` becomes the ``integration``
# module. That triggers the "duplicate module" rejection because
# multiple paths claim the same name. Exclude the conftests and the
# per-package integration trees from mypy's analysis — pytest still
# imports them at runtime via ``--import-mode=importlib``, and pyright
# still type-checks them through its rooted include logic. The
# ``test_*.py`` files have unique names across the workspace so they
# stay covered here.
exclude = [
    "(^|/)conftest\\.py$",
    "(^|/)tests/integration(/|$)",
]


# Third-party imports without type stubs. These are separately
# addressed by pulling in types-* packages as they become available;
# tracked in the ratchet issues.
[[tool.mypy.overrides]]
module = [
    # keep-sorted start
    "keyring",
    "keyring.*",
    "yaml",
    # keep-sorted end
]
ignore_missing_imports = true


# Pytest convention: test function signatures (``def test_foo(tmp_path):``)
# intentionally stay unannotated — pytest's fixture injection already gives
# each parameter a single well-known type, and adding ``-> None`` / fixture
# type hints to every test provides no extra value while making the suite
# much noisier. Keep strict everywhere else.
# Per-package ``tests/`` trees collapse to flat module names under
# mypy's path-walk: e.g.
# ``packages/agent-auth/tests/test_audit.py`` resolves to the bare
# module ``test_audit``. Listing every workspace test module here
# means new test files need a corresponding entry — that's the price
# of the per-package ``tests/`` layout. The list is kept sorted so
# diffs against a new entry are obvious. ``tests.*`` and
# ``tests_support.*`` cover the workspace-root tests/ tree and the
# tests_support library; ``things_client_fake.*`` and
# ``gpg_backend_fake.*`` cover the bridge test fakes.
[[tool.mypy.overrides]]
module = [
    # keep-sorted start
    "fault.test_things_applescript_failure",
    "gpg_backend_fake.*",
    "test_agent_auth_client",
    "test_agent_auth_unreachable",
    "test_approval",
    "test_audit",
    "test_audit_chain",
    "test_audit_disk_full",
    "test_audit_schema",
    "test_cli",
    "test_config",
    "test_crypto",
    "test_error_taxonomy",
    "test_gpg_backend_fake",
    "test_gpg_backend_host",
    "test_gpg_bridge_config",
    "test_gpg_bridge_server",
    "test_gpg_cli_cli",
    "test_gpg_cli_config",
    "test_gpg_end_to_end",
    "test_gpg_models",
    "test_gpg_subprocess_client",
    "test_integration_harness",
    "test_integration_support",
    "test_keyring_unavailable",
    "test_keys",
    "test_migrations",
    "test_notification_plugin_timeout",
    "test_perf_budget",
    "test_rate_limit",
    "test_scopes",
    "test_server",
    "test_server_metrics",
    "test_server_rate_limit",
    "test_server_shutdown",
    "test_server_tls",
    "test_shutdown_subprocess",
    "test_sqlite_failures",
    "test_store",
    "test_tests_support_notifier",
    "test_things_applescript_failure",
    "test_things_bridge_client",
    "test_things_bridge_server",
    "test_things_bridge_shutdown",
    "test_things_bridge_tls",
    "test_things_cli_cli",
    "test_things_cli_client",
    "test_things_cli_credentials",
    "test_things_client_applescript_things",
    "test_things_client_fake",
    "test_things_models",
    "test_things_subprocess_client",
    "test_tokens",
    "tests.*",
    "tests_support.*",
    "things_client_fake.*",
    # keep-sorted end
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# Mutation testing, per .claude/instructions/testing-standards.md
# "Mutation testing on security-critical paths" and ADR 0021. Mutates
# the five modules that together implement the token lifecycle and
# cryptographic/storage trust base: tokens (HMAC signing / parsing),
# crypto (AES-GCM encrypt/decrypt), keys (keyring load/generate),
# scopes (tier resolution / authorisation decisions), store (token
# family persistence with field-level encryption). Survivors on these
# modules indicate a real gap in the test suite because a subtle
# regression here is a security defect rather than a functional one.
#
# The runner is scoped to the unit-test files that directly exercise
# these modules so a single mutant triggers at most one focused test
# run rather than the full suite — mutation testing otherwise scales
# quadratically with test-suite size and becomes impractical on every
# PR. This job runs nightly on CI (see mutation.yml); the score floor
# is enforced by scripts/check-mutation-score.sh, which reads the
# threshold from the [tool.mutation_score] section below.
[tool.mutmut]
paths_to_mutate = [
    # keep-sorted start
    "packages/agent-auth/src/agent_auth/crypto.py",
    "packages/agent-auth/src/agent_auth/keys.py",
    "packages/agent-auth/src/agent_auth/scopes.py",
    "packages/agent-auth/src/agent_auth/store.py",
    "packages/agent-auth/src/agent_auth/tokens.py",
    # keep-sorted end
]
# mutmut only copies files under paths_to_mutate into the mutants/
# working copy by default, so sibling modules (agent_auth.config,
# agent_auth.audit, agent_auth.errors, ...) and the other top-level
# packages referenced by the test suite are missing at import time.
# Replicate the entire packages/ tree so the Python imports the
# pytest session expects all resolve; per-mutant copies overwrite the
# files under paths_to_mutate for each mutation.
also_copy = [
    "packages/",
]
# Explicitly override the default tests_dir to just the unit-test
# files that directly exercise the mutated modules. Integration
# tests under packages/<svc>/tests/integration/ are too slow for the
# per-mutant loop and the other unit-test files don't add signal on
# tokens / crypto / keys / scopes / store.
tests_dir = [
    # keep-sorted start
    "packages/agent-auth/tests/test_crypto.py",
    "packages/agent-auth/tests/test_keys.py",
    "packages/agent-auth/tests/test_scopes.py",
    "packages/agent-auth/tests/test_store.py",
    "packages/agent-auth/tests/test_tokens.py",
    # keep-sorted end
]
pytest_add_cli_args = ["--no-cov"]
do_not_mutate = [
    # __init__.py is a pure re-export surface; mutating it just
    # produces noise without signal on the security properties we're
    # trying to assert.
    "packages/agent-auth/src/agent_auth/__init__.py",
]

# Mutation-score floor for the scheduled mutation CI job. The local
# baseline on the five targeted modules (tokens, crypto, keys, scopes,
# store) was 68.95% (262 killed / 380 actionable mutants); the floor
# is set a few points below to absorb run-to-run variance while still
# catching a regression. Ratchets upward with the same never-lower
# policy as [tool.pytest.ini_options].addopts --cov-fail-under. Score
# is killed / (killed + survived), ignoring no_tests / skipped /
# timeout mutants.
[tool.mutation_score]
fail_under = 65.0
